fix: correct GET /occurrences to support optional status filter for admin moderation (#62)
GET /api/v1/occurrences is restricted to ADMIN in SecurityConfig,
intended as the moderation endpoint for reviewing occurrences — but the
underlying method (getVerifiedOccurrences) only returned occurrences
already marked VERIFIED, making it impossible for an admin to ever see
what actually needs moderation (PENDING).

This surfaced while building the admin dashboard on the frontend: the
page had nothing to show, since verified occurrences are, by definition,
already past the point where moderation actions apply.